--- a/basics.html
+++ b/basics.html
@@ -6,5 +6,24 @@
     </head>
     <body>
     <!--This is how to comment in HTML-->
+        <h1> 
+            <!--This is a header 1 tag-->
+            This is how h1 looks
+        </h1>
+        <h2>
+            This is how h2 looks
+        </h2>
+        <h3>
+            This is how h3 looks
+        </h3>
+        <p> <!-- this is a paragraph tag -->
+            This is a paragraph
+            this is line two
+            this is line three
+            <!-- if I want seperate blocks I will need to seperate
+            them in different tags-->
+        </p>
+        <p>this is line two now</p>
+        <p>this is line three now</p>
     </body>
 </html>
