learned about lists as well as bold and italics

--- a/basics.html
+++ b/basics.html
@@ -25,5 +25,35 @@
         </p>
         <p>this is line two now</p>
         <p>this is line three now</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt ex, maiores eum eligendi quibusdam nobis libero ipsam suscipit tempora voluptatibus aut aliquid voluptas veritatis enim alias, necessitatibus neque placeat? A.</p>
+        <p><b> this is text that is in bold</b></p> <!-- this is the old way of turning text bold and italics-->
+        <p><i> this is text that is in italics</i></p>
+        <p><strong> this is text that is in bold in a new way</strong></p> <!--this is the new way of doing it-->
+        <p><em> this is text that is in italics in a new way</em></p>
+
+        <!-- to create a ordered list use ol tag-->
+        <ol>
+            <li>First Item</li>
+            <li>Second Item</li>
+            <li>Third Item</li>
+        </ol>
+        <ul>
+            <li>Bullet One</li>
+            <li>Bullet Two</li>
+            <li>Something Else</li>
+        </ul>
+
+        <!--Nested Lists-->
+        <ol>
+            <li>Item One</li>
+            <li>Item two</li>
+            <ul>
+                <li>Nested one</li>
+                <li>Nested Two</li>
+                <ol>
+                    <li><em>nest within a nest</em></li>
+                </ol>
+            </ul>
+        </ol>
     </body>
 </html>
