--- a/basics.html
+++ b/basics.html
@@ -55,5 +55,11 @@
                 </ol>
             </ul>
         </ol>
+        <!--Divs and Spans here-->
+        <h1>Divs and Spans</h1>
+        <div class="groupone">  <!--now these elements are grouped for similar styling usining div-->
+            <h1>Group One</h1>
+            <p>I want to <span>be together in </span>group one</p> <!-- used for specific items in a line-->
+        </div>
     </body>
 </html>
