attributes in HTML

--- a/basics.html
+++ b/basics.html
@@ -60,6 +60,10 @@
         <div class="groupone">  <!--now these elements are grouped for similar styling usining div-->
             <h1>Group One</h1>
             <p>I want to <span>be together in </span>group one</p> <!-- used for specific items in a line-->
+
+        <h1>Attributes</h1>
+        <img src="DJANGO_COURSE_1.xx/HTML_Level_One/django.png" alt="Error: image not found!"> <!--src= Source alt=alternate-->
+        <a href="newpage.html">New Page</a> <!--This is how you create a link to a new page-->
         </div>
     </body>
 </html>
