--- a/advanced.html
+++ b/advanced.html
@@ -5,8 +5,28 @@
         <title>Advanced Course</title>
     </head>
     <body>
-        <table> <!--table tag used for making tables-->
-
+        <table border="10"> <!--table tag used for making tables-->
+            <!-- You can build a table without a thead!-->
+            <thead> <!--Used for table columns-->
+                <th>Number</th>
+                <th>Color</th>
+                <th>Country</th>
+            </thead>
+            <thead>
+                <th>Text</th>
+                <th>Shape</th>
+                <th>City</th>
+            </thead> <!--just creates another header-->
+            <tr> <!--Used for table rows-->
+                <td>250</td>
+                <td>Red</td>
+                <td>Egypt</td>
+            </tr>
+            <tr>
+                <td>100</td>
+                <td>Blue</td>
+                <td>Libya</td>
+            </tr>
         </table>
     </body>
 </html>
