--- a/Assignments/HTML-ASS-ONE.html
+++ b/Assignments/HTML-ASS-ONE.html
@@ -24,7 +24,7 @@
             Bonus: Optional Extra Credit
         </h2>
         <p>Can you figure out how to make a picture a link?</p>
-        <a href="https://www.djangoproject.com/"><img src="DJANGO_COURSE_1.xx/HTML_Level_One/django.png" alt="Opps! Image not Found"></a>
+        <a href="https://www.djangoproject.com/"><img src="../DJANGO_COURSE_1.xx/HTML_Level_One/django.png" alt="Opps! Image not Found"></a>
 
     </body>
 
