Working with HTML Forms

--- a/CodeTaking/advanced.html
+++ b/CodeTaking/advanced.html
@@ -28,5 +28,23 @@
                 <td>Libya</td>
             </tr>
         </table>
+        <h1>Forms</h1>
+        <form>
+            <h3>Log In</h3>
+            <h4>Please Input your Email and Password</h4>
+            <table>
+                <!--Different types of input email,password,submit,color,text-->
+                <tr>
+                    <td>Email</td>
+                    <td><input type="email" name="useremail" value="Email Here"></td>
+                </tr>
+                <tr>
+                    <td>Password</td>
+                    <td><input type="password" name="password" value=""></td>
+                </tr>
+            </table>
+            <input type="submit" name="" value="Submit">
+        </form>
+        
     </body>
 </html>
