Using Forms in HTML

--- a/CodeTaking/advanced.html
+++ b/CodeTaking/advanced.html
@@ -29,14 +29,14 @@
             </tr>
         </table>
         <h1>Forms</h1>
-        <form>
+        <form action="https://wwww.facebook.com" method="get">
             <h3>Log In</h3>
             <h4>Please Input your Email and Password</h4>
             <table>
                 <!--Different types of input email,password,submit,color,text-->
                 <tr>
                     <td>Email</td>
-                    <td><input type="email" name="useremail" value="Email Here"></td>
+                    <td><input type="email" name="useremail" placeholder="Email Here" required></td>
                 </tr>
                 <tr>
                     <td>Password</td>
@@ -44,6 +44,19 @@
                 </tr>
             </table>
             <input type="submit" name="" value="Submit">
+            <div>
+            <label>
+                Enter Text:
+            <input type="test" name="Some text" value="Enter Text">
+            </label>
+            </div>
+            <div>
+                <label for="1">Enter Input:</label>
+                <input id="1" type="text" name="" placeholder="Input">
+                <label for="2">Enter Second Input:</label>
+                <input id="2" type="color" name="" value="Color">
+            </div>
+            
         </form>
         
     </body>
