Exploring IDs in inputs and labels

--- a/CodeTaking/advanced.html
+++ b/CodeTaking/advanced.html
@@ -51,10 +51,10 @@
             </label>
             </div>
             <div>
-                <label for="1">Enter Input:</label>
-                <input id="1" type="text" name="" placeholder="Input">
-                <label for="2">Enter Second Input:</label>
-                <input id="2" type="color" name="" value="Color">
+                <label for="one">Enter Input:</label>
+                <input id="one" type="text" name="" placeholder="Input">
+                <label for="two">Enter Second Input:</label>
+                <input id="two" type="color" name="" value="Color">
             </div>
             
         </form>
