--- a/CodeTaking/advanced.html
+++ b/CodeTaking/advanced.html
@@ -58,6 +58,22 @@
             </div>
             
         </form>
+        <h1>Hotel Feedback Form</h1>
+        <form method="get">
+            <h3>Are you From Egypt?</h3>
+            <label for="ineg">Inside: </label>
+            <input id="ineg" type="radio" name="loc" value="Inside">
+            <label for="outeg">Outside: </label>
+            <input id="outeg" type="radio" name="loc" value="Outside">
+
+            <p>How was your service?</p>
+            <select name="stars">
+                <option value="Great">3</option>
+                <option value="Ok">2</option>
+                <option value="bad">1</option>
+            </select>
+            <input type="submit" name="" value="Submit">
+        </form>
         
     </body>
 </html>
