styling ids, classes and specifying styling

--- a/CodeTaking/part2.html
+++ b/CodeTaking/part2.html
@@ -8,11 +8,29 @@
     </head>
     <body>
         <p> This is paragraph, outside any div </p>
-        <div>
+        <div class="previous">
             <p>Im Inside the div</p>
             <p>I am also inside the div</p>
             <p>Inside dive <span>inside span</span></p>
         </div>
+
+        <h3>Im a h3 heading</h3>
+        <div class="firstDiv">
+            <p>Im Inside the firstDiv class</p>
+        </div>
+        <div class="secondDiv">
+            <p>Im inside the secondDiv class</p>
+        </div>
+
+        <p id="singledout">ids must be unique!</p>
+        <h3>Here is a list</h3>
+        <ul>
+            <li>Hello <input type="checkbox"></li>
+            <li>World <input type="text"></li>
+            <li><a href="www.wasla.com">Wasla</a></li>
+            <li><a href="npr.org">NPR</a></li>
+
+        </ul>
     </body>
 </html>
     
