Working with fonts and importing them from google and font library

--- a/CodeTaking/css/part1_fonts.html
+++ b/CodeTaking/css/part1_fonts.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="part1_fonts.css"
+    <link rel="stylesheet" href="part1_fonts.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
-    <h1>Heading One</h1>
+    <h1>Sama GD</h1>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus impedit consequuntur ab, modi dolorum nam. Optio ducimus corporis dicta provident dolorem hic. Obcaecati odit unde ut accusantium mollitia dolorem illo.</p>
-    <p id="two">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati aperiam ex fugiat nihil quos laudantium magnam id deleniti aspernatur beatae sit quo atque quae, animi saepe illum, inventore iure veniam.</p>
+    <p>Sama needs to go to the hair salon</p>
+    <p id="two">Sama will use the car</p>
 </body>
 </html>
