--- a/Assignments/thankyou.html
+++ b/Assignments/thankyou.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Thank You!</title>
+        <link rel="stylesheet" href="capstone_project_1.css">
     </head>
     <body>
         <h1>Thank you for Signin Up</h1>
