working with hamburger collapse feature using JS

--- a/CodeTaking/bootstrap/btsnavbar.html
+++ b/CodeTaking/bootstrap/btsnavbar.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,6 +33,24 @@
         </div>
       </nav>
     </div>
+
+      <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat molestias natus debitis consectetur, enim sed unde doloribus earum alias error fuga illo minus molestiae ut dolorem magnam fugit corrupti repudiandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, officia! Architecto laboriosam, delectus sit quae doloremque quisquam, repellat magnam alias possimus accusamus adipisci minima tenetur enim animi provident quod ratione?</p>
+        <p></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quae similique cumque accusamus eligendi nesciunt atque illum perferendis quidem sunt rem laborum error, earum laboriosam est recusandae assumenda! Praesentium, suscipit?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aliquid natus soluta sunt iste libero animi dolores, totam autem. Officia eos illum possimus asperiores dicta aut voluptates vel cum provident?</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
+      </div>
+    </div>
+
     
 </body>
 </html>
