--- a/CodeTaking/bootstrap/gridsystm.html
+++ b/CodeTaking/bootstrap/gridsystm.html
@@ -26,9 +26,15 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 boxy">COL Large 4</div>
-            <div class="col-lg-4 boxy">COL Large 4</div>
-            <div class="col-lg-4 boxy">COL Large 4</div>
+            <div class="col-md-6 boxy">COL Med 6</div>
+            <div class="col-md-6 boxy">COL Med 6</div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6 boxy">COL XS 6</div>
+            <div class="col-6 boxy">COL XS 6</div>
         </div>
     </div>
 
