--- a/CodeTaking/bootstrap/gridsystm.html
+++ b/CodeTaking/bootstrap/gridsystm.html
@@ -38,5 +38,14 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 boxy">ONE</div>
+            <div class="col-lg-3 col-sm-6 boxy">TWO</div>
+            <div class="col-lg-3 col-sm-6 boxy">THREE</div>
+            <div class="col-lg-3 col-sm-6 boxy">FOUR</div>
+        </div>
+    </div>
+
 </body>
 </html>
