--- a/CodeTaking/bootstrap/gridsystm.html
+++ b/CodeTaking/bootstrap/gridsystm.html
@@ -47,5 +47,15 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-lg-6 boxy">ONE
+            <div class="row">
+                <div class="col-lg-6 boxy">NEST ONE</div>
+                <div class="col-lg-6 boxy">NEST TWO</div>
+            </div>
+        </div>
+        <div class="col-lg-6 boxy">TOP LEVEL</div>
+    </div>
+
 </body>
 </html>
