--- a/CodeTaking/bootstrap/gridsystm.html
+++ b/CodeTaking/bootstrap/gridsystm.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-6 boxy">ONE
+        <div class="col-lg-6 boxy">
             <div class="row">
                 <div class="col-lg-6 boxy">NEST ONE</div>
                 <div class="col-lg-6 boxy">NEST TWO</div>
